# socapi

./: .gitignore  LICENSE  README.md  pyproject.toml  pyprojects.toml  test.ipynb
src/: tester.ipynb
src/socapi/: __init__.py  _constructor.py  _downloader.py  _links.py  _meta_parser.py  _profiler.py  _quota.py  _searcher.py  _statistic.py  constants.py  endpoints.py  expeptions.py  utils.py  worker.py
src/socapi/models/: _client_model.py  _download_models.py  _meta_parser_models.py  _searcher_models.py  _stat_models.py  _statistics_models.py
tests/: tests.ipynb
